--- a/RPG/RPG/Base.lproj/Main.storyboard
+++ b/RPG/RPG/Base.lproj/Main.storyboard
@@ -73,7 +73,7 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Bcf-HK-01B" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0XD-YS-WHF"/>
                             <constraint firstItem="Bcf-HK-01B" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="d1u-Ku-UUy"/>
